# wheelchair_control_support

./: .gitignore  CMakeLists.txt  Modified DWA implemetation.txt  README.md  find_gap_idea.md  odom_update_idea.md  package.xml  scan_filter_idea.md  test_yaml.py
config/: lidar_config.yaml  living_lab_localization_amcl.yaml  mppi_shared_controller_config.yaml  share_control_config.yaml  test_global_planner.yaml  turtlebot_share_control_config.yaml  whill_config.yaml
data/: value_function.csv  value_function.json  value_function_interpolation.json  value_function_interpolation2.json  value_function_interpolation_orientation_emphasis.json  value_function_temp.json  value_function_very_fined_changed_cost.json
demo/: Screencast from 2024年06月26日 16時16分20秒.webm  stop_in_front.webm  turn_right.webm
idea/: change_cost_function.md  control_support_for_predicted_gap.md  experiment.md  find_gap_idea.md  fix_intention_estimation.md  fixing_control_support.md  intention_estimator_idea.md  recovery_behavior.md  system_overview.md  testing_in_whill.md
include/wheelchair_control_support/: AbstractFootprint.hpp  CircularFootprint.hpp  EgocircleMap.hpp  EgocircleOccupancyGrid.hpp  FindGap.hpp  Gap.hpp  IntendedGoalEstimator.hpp  NoiseGenerator.hpp  RectangularFootprint.hpp  ShareControl.hpp  shared_controller_node.hpp
launch/: living_lab_localization.launch.py  manual.launch.py  merge_lidar.launch.py  mppi_support_system.launch.py  start_2_lidar.launch.py  support_system.launch.py  test_global_planner_launch.py  test_velocity_to_joy.launch.py  turtlebot.launch.py  whill_modelc.launch.py
map/: living_lab.pgm  living_lab.yaml
model/: modelc3.xacro  modelc_with_lidar.urdf
msg/: Gap.msg
script/: joy_visualizer.py  mdp_solve.py  mdp_solve_copy.py  mdp_solver.ipynb  scan_filter.py  test_gap_circle_viz.py  test_scan_filter_py.py
src/: ShareControl.cpp  cal_acceleration.cpp  cal_min_distance_to_obs_from_rosbag.cpp  intended_goal_estimator.cpp  odometry_listener.cpp  scan_filter.cpp  share_control_node.cpp  shared_controller_node.cpp  simple_joystick_publisher.cpp  simple_velocity_publisher.cpp  test_egocircle_map.cpp  test_find_gap.cpp  test_find_gap2.cpp  test_footprint.cpp  test_global_planner.cpp  test_visualization.cpp  vel_joy_exchange.cpp
